--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -7,6 +7,8 @@
   height: 100%;
   padding-top: 50px;
   width: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 h3 {
@@ -35,7 +37,7 @@ h2 {
   color: #4ab900;
   float: left;
   padding: 12px;
-  top: 32px;
+  height: 40px;
   width: 40px;
 }
 .input_layout {
